--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>image mapify</title>
-	<link rel="stylesheet" href="stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="https://raw.github.com/vieron/image-mapify/master/stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 	
@@ -50,7 +50,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script src="javascripts/jquery.image-mapify.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://raw.github.com/vieron/image-mapify/master/javascripts/jquery.image-mapify.js" type="text/javascript" charset="utf-8"></script>
 
 
 <script type="text/javascript" charset="utf-8">
