--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>image mapify</title>
-	<link rel="stylesheet" href="https://raw.github.com/vieron/image-mapify/master/stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 	
