--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>image mapify</title>
-	<link rel="stylesheet" href="stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	
+	<link rel="stylesheet" href="stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	
 </head>
 
@@ -56,9 +55,7 @@
 <script type="text/javascript" charset="utf-8">
   $(function(){
     
-    $('#image-mapify').imageMapify({
-      caca : true
-    });
+    $('#image-mapify').imageMapify();
     
   })
 </script>
