--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 <script type="text/javascript" charset="utf-8">
   $(function(){
     
-    $('#image-mapify').imageMapify({
-      caca : true
-    });
+    $('#image-mapify').imageMapify();
     
   })
 </script>
