aded typekit fonts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>image mapify</title>
-	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link rel="stylesheet" href="stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	
+	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<script type="text/javascript" src="http://use.typekit.com/qjd4okk.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 </head>
 
 <body>
@@ -16,8 +18,9 @@
 <div class="wrapper">
 
 <h1>image mapify</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+<p>
+  Indicates the URL of an image, then you can map it with all the links you want and get the HTML code. So simple.
+</p>
 
 <div id="image-mapify">
   <div id="viewport">
@@ -32,7 +35,7 @@
         <input type="text" name="background_image_url" value="http://placehold.it/520x900" id="background_image_url" />
       </li>
       <li>
-        <a href="#" id="add_shape">+ Add shape</a>
+        <a href="#" id="add_shape">+ Add shape</a> <em>If there are many shapes, double-click to select.</em>
       </li>
       <li>
           <a href="#" id="generate_code">Generate HTML code</a><a href="#" id="preview">Preview</a>
