fix jquery ui css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>image mapify</title>
 	<link rel="stylesheet" href="stylesheets/image-mapify.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="stylesheets/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<script type="text/javascript" src="http://use.typekit.com/qjd4okk.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
