relativize js path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script src="https://raw.github.com/vieron/image-mapify/master/javascripts/jquery.image-mapify.js" type="text/javascript" charset="utf-8"></script>
+<script src="javascripts/jquery.image-mapify.js" type="text/javascript" charset="utf-8"></script>
 
 
 <script type="text/javascript" charset="utf-8">
